--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.WorkoutPlannerApp"
         tools:targetApi="31">
         <activity
+            android:name=".view.activity.WeekFormActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.activity.ExerciseFormActivity"
             android:exported="false" />
         <activity
